--- a/src/sass/utility/_u-font.scss
+++ b/src/sass/utility/_u-font.scss
@@ -91,3 +91,9 @@
     );
     text-shadow: 0 0 rem(2) rgb(243, 232, 232);
 }
+
+.fa-asterisk {
+    font-size: 9px;
+    vertical-align: top;
+    color: rgb(255, 0, 0);
+}
