--- a/src/sass/project/_p-guidelines.scss
+++ b/src/sass/project/_p-guidelines.scss
@@ -56,7 +56,6 @@
 }
 
 .p-guidelines__list {
-  display: flex;
   position: relative;
   margin-bottom: 15px;
   border-bottom: 1px solid #999390;
@@ -64,6 +63,7 @@
   padding-bottom: rem(30);
   padding-top: rem(30);
   @include mq(md) {
+    display: flex;
     padding-bottom: rem(30);
     padding-top: rem(30);
   }
@@ -83,15 +83,23 @@
   // float: left;
   // width: 60%;
   min-width: rem(80);
+  margin-bottom: rem(20);
+  font-weight: 600;
   @include mq(md) {
     width: rem(180);
+    margin-bottom: rem(0);
+  }
+
+  small {
+    font-size: rem(12);
   }
 }
 
 .p-guidelines__description {
-  min-width:  rem(200);
-  padding-left: rem(30);
+  min-width: rem(200);
+  word-break: keep-all;
   @include mq(md) {
+    padding-left: rem(10);
     // padding-left: rem(200);
     // margin-left: rem(20);
   }
