--- a/_include/header.html
+++ b/_include/header.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta name="format-detection" content="telephone=no" />
     <title>いこいの里｜採用</title>
     <meta name="description" content="トップページの説明" />
@@ -37,7 +38,7 @@
               <a href="#message">代表挨拶</a>
             </li>
             <li class="p-header__nav-item">
-              <a href="#about">私たちのお仕事</a>
+              <a href="#schedule">先輩の1日と働きがい</a>
             </li>
             <li class="p-header__nav-item">
               <a href="#guidelines">募集要項</a>
@@ -72,7 +73,7 @@
                 <a href="#message">代表挨拶</a>
               </li>
               <li class="p-header__drawer-item">
-                <a href="#about">私たちのお仕事</a>
+                <a href="#schedule">先輩の1日と働きがい</a>
               </li>
               <li class="p-header__drawer-item">
                 <a href="#guidelines">募集要項</a>
