--- a/src/sass/project/_p-schedule.scss
+++ b/src/sass/project/_p-schedule.scss
@@ -108,7 +108,7 @@
 .p-schedule__items {
   position: relative;
   width: 100%;
-  padding: rem(50) rem(20);
+  padding: rem(50) rem(15);
   padding-top:  rem(80);
 
   @include mq(md) {
@@ -162,7 +162,7 @@
 
 .p-schedule__item-title {
   font-weight: 400;
-  font-size: rem(20);
+  font-size: rem(18);
   // word-break: keep-all;
   @include mq(md) {
     font-size: rem(26);
@@ -330,7 +330,7 @@
     position: absolute;
     left: 0;
     padding-left:  rem(100);
-    word-break: keep-all;
+    // word-break: keep-all;
   }
 }
 
@@ -378,7 +378,7 @@
   // display: none;
   border: 1px solid #aeaeae;
   background-color: $color-white;
-  padding: rem(20) rem(20);
+  padding: rem(20) rem(21);
   @include mq(md) {
     padding: rem(40) rem(60);
   }
