--- a/src/sass/project/_p-work.scss
+++ b/src/sass/project/_p-work.scss
@@ -51,6 +51,13 @@
     text-align: center;
     margin-bottom: rem(40);
   }
+
+  p {
+
+    @include mq(md){
+      width: rem(1200);
+    }
+  }
 }
 
 .p-work__wrap {
